Add clear selected to object list

--- a/www/templates/backup/objectList.html
+++ b/www/templates/backup/objectList.html
@@ -8,7 +8,11 @@
     </colgroup>
     <thead>
       <tr>
-        <th class="select-header"></th>
+        <th class="select-header">
+          <div class="select">
+            <div class="select-inner"></div>
+          </div>
+        </th>
         <th class="title-header">
           <div class="title-title">TITLE</div>
         </th>
