--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -491,6 +491,27 @@
   max-width: 20px;
 }
 
+.backup .object-list .select-header {
+  padding-left: 5px;
+}
+
+.backup .object-list .select-header .select {
+  width: 11px;
+  height: 11px;
+  border: @object-border;
+}
+
+.backup .object-list .select-header .select.selected:hover {
+  border: @object-hover-border;
+}
+
+.backup .object-list .select-header .select.selected .select-inner {
+  width: 15px;
+  height: 15px;
+  background-position: -5px -6px;
+  background-image: @checkmark-partial-uri;
+}
+
 .backup .object-list .title-col-group,
 .backup .object-list .title-header,
 .backup .object-list .title-col {
@@ -545,6 +566,10 @@
   width: 11px;
   height: 11px;
   border: @object-border;
+}
+
+.backup .object-list .select:hover {
+  border: @object-hover-border;
 }
 
 .backup .object-list .select.selected .select-inner {
