--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -81,6 +81,7 @@
 
 @object-fg: #222222;
 @object-border: solid 1px #808080;
+@object-hover-border: solid 1px #606060;
 @object-selected-bg: #c5e4fc;
 
 @object-path-fg: #777777;
