Change styles for settings button and object border

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -84,6 +84,10 @@
   .transition(border, 0.2s);
 }
 
+.backup .volume .settings button {
+  padding: 3px 0;
+}
+
 .backup .volume .settings .setting-error {
   margin-top: -13px;
   position: absolute;
