--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -80,8 +80,8 @@
 @item-id-fg: #ebebeb;
 
 @object-fg: #222222;
-@object-border: solid 1px #808080;
-@object-hover-border: solid 1px #606060;
+@object-border: solid 1px #ababab;
+@object-hover-border: solid 1px #858585;
 @object-selected-bg: #c5e4fc;
 
 @object-path-fg: #777777;
