Color list item background to match state of item

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -33,8 +33,7 @@
 @red-tooltip-bg: #ac0000;
 
 @box-bg: rgba(0, 114, 230, 0.55);
-
-@box-border: 1px solid #0072e6;
+@box-border: 1px solid @button-bg;
 
 @error-box-bg: rgba(255, 36, 35, 0.7);
 @error-box-border: 1px solid #ff2423;
@@ -64,18 +63,26 @@
 @item-pending-bg: #018f23;
 @item-pending-hover-bg: #01691a;
 @item-pending-active-bg: #17a138;
+@item-pending-box-bg: rgba(1, 143, 35, 0.5);
+@item-pending-box-border: 1px solid @item-pending-bg;
 
 @item-aborting-bg: #4e4e4e;
 @item-aborting-hover-bg: #3c3c3c;
 @item-aborting-active-bg: #686868;
+@item-aborting-box-bg: rgba(78, 78, 78, 0.5);
+@item-aborting-box-border: 1px solid @item-aborting-bg;
 
 @item-failed-bg: #f53205;
 @item-failed-hover-bg: #c72904;
 @item-failed-active-bg: #ff6f4f;
+@item-failed-box-bg: rgba(245, 50, 5, 0.5);
+@item-failed-box-border: 1px solid @item-failed-bg;
 
 @item-removing-bg: #d30907;
 @item-removing-hover-bg: #960605;
 @item-removing-active-bg: #fc2e2c;
+@item-removing-box-bg: rgba(211, 9, 7, 0.5);
+@item-removing-box-border: 1px solid @item-removing-bg;
 
 @item-id-fg: #ebebeb;
 
