--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -1,13 +1,15 @@
-<div class="item button">
-  <div class="title"><%= formatTime(id) %></div>
-  <i class="toggle-info icon-chevron-down no-select"></i>
-  <i class="icon icon-remove no-select"></i>
-  <i class="icon icon-stop no-select"></i>
-</div>
-<div class="info">
-  Sent: <%= sent %><br>
-  Received: <%= received %><br>
-  Speed: <%= speed %><br>
-  Runtime: <%= runtime %><br>
-  ID: <%= id %>
+<div class="item-box">
+  <div class="item button">
+    <div class="title"><%= formatTime(id) %></div>
+    <i class="toggle-info icon-chevron-down no-select"></i>
+    <i class="icon icon-remove no-select"></i>
+    <i class="icon icon-stop no-select"></i>
+  </div>
+  <div class="info">
+    Sent: <%= sent %><br>
+    Received: <%= received %><br>
+    Speed: <%= speed %><br>
+    Runtime: <%= runtime %><br>
+    ID: <%= id %>
+  </div>
 </div>
