--- a/www/templates/backup/task.html
+++ b/www/templates/backup/task.html
@@ -15,20 +15,22 @@
   }
 
 %>
-<div class="item button red-tooltip <%= state %>">
-  <div class="title"><%= formatTime(time) %></div>
-  <i class="task-type-icon <%= typeIcon %>"></i>
-  <% if (state === 'failed') { %>
-    <i class="task-failed-icon icon-warning-sign"></i>
-  <% } %>
-  <i class="toggle-info icon-chevron-down no-select"></i>
-  <i class="icon icon-remove no-select"></i>
-  <i class="icon icon-stop no-select"></i>
-</div>
-<div class="info">
-  <span class="task-title"><%= title %></span><br>
-  Volume: <%= volume_name %><br>
-  Time: <%= formatTime(time) %><br>
-  State: <%= state.charAt(0).toUpperCase() + state.slice(1) %><br>
-  <span class="task-id">ID: <%= id %></span>
+<div class="item-box <%= state %>">
+  <div class="item button red-tooltip">
+    <div class="title"><%= formatTime(time) %></div>
+    <i class="task-type-icon <%= typeIcon %>"></i>
+    <% if (state === 'failed') { %>
+      <i class="task-failed-icon icon-warning-sign"></i>
+    <% } %>
+    <i class="toggle-info icon-chevron-down no-select"></i>
+    <i class="icon icon-remove no-select"></i>
+    <i class="icon icon-stop no-select"></i>
+  </div>
+  <div class="info">
+    <span class="task-title"><%= title %></span><br>
+    Volume: <%= volume_name %><br>
+    Time: <%= formatTime(time) %><br>
+    State: <%= state.charAt(0).toUpperCase() + state.slice(1) %><br>
+    <span class="task-id">ID: <%= id %></span>
+  </div>
 </div>
