--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -359,54 +359,54 @@
   background-color: @button-active-bg;
 }
 
-.backup .item-box .item.pending {
+.backup .item-box.pending .item {
   background-color: @item-pending-bg;
 }
 
-.backup .item-box .item.pending:hover {
+.backup .item-box.pending .item:hover {
   background-color: @item-pending-hover-bg;
 }
 
-.backup .item-box.selected .item.pending {
+.backup .item-box.pending.selected .item {
   background-color: @item-pending-active-bg;
 }
 
-.backup .item-box .item.aborting {
+.backup .item-box.aborting .item {
   background-color: @item-aborting-bg;
 }
 
-.backup .item-box .item.aborting:hover {
+.backup .item-box.aborting .item:hover {
   background-color: @item-aborting-hover-bg;
 }
 
-.backup .item-box.selected .item.aborting {
+.backup .item-box.aborting.selected .item {
   background-color: @item-aborting-active-bg;
 }
 
-.backup .item-box .item.failed,
-.backup .item-box .item.aborted {
+.backup .item-box.failed .item,
+.backup .item-box.aborted .item {
   background-color: @item-failed-bg;
 }
 
-.backup .item-box .item.failed:hover,
-.backup .item-box .item.aborted:hover {
+.backup .item-box.failed .item:hover,
+.backup .item-box.aborted .item:hover {
   background-color: @item-failed-hover-bg;
 }
 
-.backup .item-box.selected .item.failed,
-.backup .item-box.selected .item.aborted {
+.backup .item-box.failed.selected .item,
+.backup .item-box.aborted.selected .item {
   background-color: @item-failed-active-bg;
 }
 
-.backup .item-box .item.removing {
+.backup .item-box.removing .item {
   background-color: @item-removing-bg;
 }
 
-.backup .item-box .item.removing:hover {
+.backup .item-box.removing .item:hover {
   background-color: @item-removing-hover-bg;
 }
 
-.backup .item-box.selected .item.removing {
+.backup .item-box.selected.removing .item {
   background-color: @item-removing-active-bg;
 }
 
@@ -452,9 +452,40 @@
 .backup .item-box .info {
   color: @lighter-fg;
   background-color: @box-bg;
-  border: @box-border;
+  border-left: @box-border;
+  border-right: @box-border;
+  border-bottom: @box-border;
   padding: 5px;
   display: none;
+}
+
+.backup .item-box.pending .info {
+  background-color: @item-pending-box-bg;
+  border-left: @item-pending-box-border;
+  border-right: @item-pending-box-border;
+  border-bottom: @item-pending-box-border;
+}
+
+.backup .item-box.aborting .info {
+  background-color: @item-aborting-box-bg;
+  border-left: @item-aborting-box-border;
+  border-right: @item-aborting-box-border;
+  border-bottom: @item-aborting-box-border;
+}
+
+.backup .item-box.failed .info,
+.backup .item-box.aborted .info {
+  background-color: @item-failed-box-bg;
+  border-left: @item-failed-box-border;
+  border-right: @item-failed-box-border;
+  border-bottom: @item-failed-box-border;
+}
+
+.backup .item-box.removing .info {
+  background-color: @item-removing-box-bg;
+  border-left: @item-removing-box-border;
+  border-right: @item-removing-box-border;
+  border-bottom: @item-removing-box-border;
 }
 
 .backup .object-list {
