--- a/www/templates/backup/item.html
+++ b/www/templates/backup/item.html
@@ -1,7 +1,9 @@
-<div class="item button">
-  <div class="title"><%= title %></div>
-  <i class="toggle-info icon-chevron-down no-select"></i>
-  <i class="icon icon-remove no-select"></i>
-  <i class="icon icon-stop no-select"></i>
+<div class="item-box">
+  <div class="item button">
+    <div class="title"><%= title %></div>
+    <i class="toggle-info icon-chevron-down no-select"></i>
+    <i class="icon icon-remove no-select"></i>
+    <i class="icon icon-stop no-select"></i>
+  </div>
+  <div class="info"><%= info %></div>
 </div>
-<div class="info"><%= info %></div>
