--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -167,6 +167,10 @@
   display: inline-block;
 }
 
+.backup .volume .title-source-path {
+  font-size: 0.9em;
+}
+
 .backup .volume .usage-meter {
   width: 40px;
   height: 40px;
