Change object drop border

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -692,7 +692,7 @@
 }
 
 .backup .object-drop {
-  .width-calc(~'38% - 7px');
+  .width-calc(~'38% - 6px');
   min-width: @object-drop-min-width;
   margin-top: 6px;
   position: absolute;
@@ -723,6 +723,7 @@
   margin: 0 auto;
   position: relative;
   clear: both;
+  border-radius: 5px;
 }
 
 .backup.drag-box {
