Add task for removing snapshots Improve removing tasks

--- a/www/templates/backup/task.html
+++ b/www/templates/backup/task.html
@@ -5,6 +5,10 @@
     title = 'Creating New Snapshot';
     typeIcon = 'icon-time';
   }
+  else if (type === 'remove_snapshot') {
+    title = 'Removing Snapshot';
+    typeIcon = 'icon-trash';
+  }
   else if (type === 'restore_object') {
     title = 'Restoring Files';
     typeIcon = 'icon-download-alt';
