Add snapshot limit to interface

--- a/www/templates/backup/volume.html
+++ b/www/templates/backup/volume.html
@@ -29,6 +29,7 @@
 
     <div class="setting-schedule"></div>
     <div class="setting-min-free-space"></div>
+    <div class="setting-snapshot-limit"></div>
     <div class="setting-bandwidth-limit"></div>
 
     <div class="error">
