Fix selection color

--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -10,10 +10,12 @@ body {
 }
 
 ::-moz-selection {
+  color: @default-fg;
   background-color: @selection-bg;
   text-shadow: none;
 }
 ::selection {
+  color: @default-fg;
   background-color: @selection-bg;
   text-shadow: none;
 }
