Add height calc less mixin

--- a/www/styles/mixins.less
+++ b/www/styles/mixins.less
@@ -38,6 +38,13 @@
   width: calc(@func);
 }
 
+.height-calc(@func) {
+  height: -webkit-calc(@func);
+  height: -moz-calc(@func);
+  height: -o-calc(@func);
+  height: calc(@func);
+}
+
 .clear-border-radius {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
