--- a/www/templates/backup/backups.html
+++ b/www/templates/backup/backups.html
@@ -5,9 +5,9 @@
       <div class="snapshots-box"></div>
       <div class="tasks-box"></div>
     </div>
-    <div class="past span4 no-select">
+    <div class="past span4">
     </div>
-    <div class="origin span4 no-select">
+    <div class="origin span4">
     </div>
   </div>
 </div>
