Add syntax highlighting

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -763,12 +763,6 @@
 }
 
 .backup .text-viewer-box .title .close-viewer {
+  margin: 3px 0 0 0;
   float: right;
-}
-
-.backup .text-viewer-box .data {
-  font-family: Consolas, 'Liberation Mono', Courier, monospace;
-  color: #333333;
-  border-radius: 0;
-  .height-calc(~'100% - 61px');
 }
