--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -200,3 +200,17 @@ button:focus {
 .ui-slider-vertical .ui-slider-range-max {
   top: 0;
 }
+
+.syntaxhighlighter {
+  overflow-x: scroll !important;
+  overflow-y: scroll !important;
+}
+
+.syntaxhighlighter table td.code .container {
+  padding: 3px 0 3px 0 !important;
+}
+
+.syntaxhighlighter {
+  margin: 0 0 0 0 !important;
+  font-size: 0.85em !important;
+}
