--- a/www/styles/main.less
+++ b/www/styles/main.less
@@ -1,4 +1,7 @@
 @import 'bootstrap.less';
+@import 'shCore.less';
+@import 'shCoreDefault.less';
+@import 'shThemeDefault.less';
 
 @import 'uri.less';
 @import 'variables.less';
