--- a/www/templates/backup/object.html
+++ b/www/templates/backup/object.html
@@ -6,7 +6,7 @@ if (type && type.indexOf('directory') !== -1) {
   titleClass = 'dir';
 }
 else if (type && type.substr(0, 4) === 'text') {
-  //titleClass = 'text';
+  titleClass = 'text';
 }
 %>
 <td class="select-col">
