--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -2,6 +2,8 @@
   <span><%= path %></span>
   <i class="close-viewer icon-remove no-select"></i>
 </div>
-<pre class="data">
-  <%= data %>
-</pre>
+<div class="data">
+  <pre class="brush: js">
+    <%= data %>
+  </pre>
+</div>
