--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -3,7 +3,7 @@
   <i class="close-viewer icon-remove no-select"></i>
 </div>
 <div class="data">
-  <pre class="brush: js">
+  <pre class="brush: js; toolbar: false;">
     <%= data %>
   </pre>
 </div>
