Changes to syntax highlighting style

--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -202,6 +202,8 @@ button:focus {
 }
 
 .syntaxhighlighter {
+  margin: 0 0 0 0 !important;
+  font-size: 0.85em !important;
   overflow-x: scroll !important;
   overflow-y: scroll !important;
 }
@@ -210,7 +212,6 @@ button:focus {
   padding: 3px 0 3px 0 !important;
 }
 
-.syntaxhighlighter {
-  margin: 0 0 0 0 !important;
-  font-size: 0.85em !important;
+.syntaxhighlighter .gutter .line {
+  border-right: 1px solid #e5e5e5 !important;
 }
