Add text handler to request text data Finish syntax highlighting

--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -1,9 +1,7 @@
 <div class="title">
-  <span><%= path %></span>
+  <span><%= id %></span>
   <i class="close-viewer icon-remove no-select"></i>
 </div>
 <div class="data">
-  <pre class="brush: js; toolbar: false;">
-    <%= data %>
-  </pre>
+  <pre class="brush: <%= type %>; toolbar: false;"><%= data %></pre>
 </div>
