Changes to syntax highlighting

--- a/www/templates/backup/object.html
+++ b/www/templates/backup/object.html
@@ -5,7 +5,7 @@ if (type && type.indexOf('directory') !== -1) {
   isDir = true;
   titleClass = 'dir';
 }
-else if (type && type.substr(0, 4) === 'text') {
+else if (syntax) {
   titleClass = 'text';
 }
 %>
