--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -3,5 +3,5 @@
   <i class="close-viewer icon-remove no-select"></i>
 </div>
 <div class="data">
-  <pre class="brush: <%= type %>; toolbar: false;"><%= data %></pre>
+  <pre class="brush: <%= syntax %>; toolbar: false;"><%= data %></pre>
 </div>
