Change text viewer padding

--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -215,3 +215,7 @@ button:focus {
 .syntaxhighlighter .gutter .line {
   border-right: 1px solid #e5e5e5 !important;
 }
+
+.syntaxhighlighter table td.code .line {
+  padding: 0 2px !important;
+}
