Change text viewer padding

--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -219,3 +219,7 @@ button:focus {
 .syntaxhighlighter table td.code .line {
   padding: 0 2px !important;
 }
+
+.syntaxhighlighter table td.gutter .line {
+  padding: 0 5px !important;
+}
