Add snapshot to text viewer title

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -762,6 +762,12 @@
   height: 20px;
 }
 
+.backup .text-viewer-box .title .snapshot-text {
+  font-size: 0.6em;
+  float: right;
+  margin-right: 5px;
+}
+
 .backup .text-viewer-box .title .close-viewer {
   margin: 3px 0 0 0;
   float: right;
