Change drag box background color

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -101,5 +101,5 @@
 @object-drop-text-border: 2px solid #474747;
 
 @drag-box-fg: #474747;
-@drag-box-bg: #ffffff;
+@drag-box-bg: rgba(255, 255, 255, 0.9);
 @drag-box-shadow: 0px 0px 5px 1px #B0B0B0;
