Style changes to syntax highlighter textarea copy mode

--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -223,3 +223,13 @@ button:focus {
 .syntaxhighlighter table td.gutter .line {
   padding: 0 5px !important;
 }
+
+.syntaxhighlighter table td.code .container textarea {
+  color: @darker-fg !important;
+  padding-top: 3px !important;
+  padding-left: 2px !important;
+}
+
+.syntaxhighlighter table td.code .container textarea:focus {
+  box-shadow: none !important;
+}
