--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -1,4 +1,4 @@
-<div class="item-box">
+<div class="item-box <%= state %>">
   <div class="item button">
     <div class="title"><%= formatTime(id) %></div>
     <i class="toggle-info icon-chevron-down no-select"></i>
@@ -11,5 +11,9 @@
     Speed: <%= speed %><br>
     Runtime: <%= runtime %><br>
     ID: <%= id %>
+    <% if (state === 'warning') { %>
+      <br>
+      Snapshot completed with warnings check log for more information.
+    <% } %>
   </div>
 </div>
