--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -36,6 +36,7 @@
 @box-border: 1px solid @button-bg;
 
 @error-box-bg: rgba(255, 36, 35, 0.7);
+@error-box-bg2: rgba(255, 36, 35, 0.9);
 @error-box-border: 1px solid #ff2423;
 
 @meter-fg: rgba(76, 76, 76, 0.60);
