--- a/www/templates/backup/volumeList.html
+++ b/www/templates/backup/volumeList.html
@@ -9,4 +9,9 @@
     </li>
   </ul>
 </div>
-<div class="new-snapshot button no-select">New Snapshot</div>
+<div class="new-snapshot-box">
+  <div class="new-snapshot button no-select">New Snapshot</div>
+  <div class="error">
+    Failed to create new snapshot. Check log for more information.
+  </div>
+</div>
