Add email address for alerts to volume settings

--- a/www/templates/backup/volume.html
+++ b/www/templates/backup/volume.html
@@ -32,6 +32,8 @@
     <div class="setting-snapshot-limit"></div>
     <div class="setting-bandwidth-limit"></div>
 
+    <div class="setting-email"></div>
+
     <div class="error">
       Failed to save volume settings. Check log for more information.
     </div>
