Add hostname/user/pass to email settings

--- a/www/templates/backup/volume.html
+++ b/www/templates/backup/volume.html
@@ -33,6 +33,9 @@
     <div class="setting-bandwidth-limit"></div>
 
     <div class="setting-email"></div>
+    <div class="setting-email-host"></div>
+    <div class="setting-email-user"></div>
+    <div class="setting-email-pass"></div>
 
     <div class="error">
       Failed to save volume settings. Check log for more information.
