--- a/www/templates/backup/volumeEmail.html
+++ b/www/templates/backup/volumeEmail.html
@@ -1,5 +1,5 @@
 <i class="left-icon <%= icon %> icon-white"></i>
-<i class="right-icon icon-upload send-test-email no-select" title="Send test email after saving"></i>
+<i class="right-icon icon-upload send-test-email no-select" title="Test email will not be sent after saving"></i>
 <i class="right-icon-two icon-lock email-ssl no-select" title="SSL is disabled"></i>
 <div class="setting">
   <input type="<%= password ? 'password' : 'text' %>" name="<%= name %>" value="<%= value %>"
