Add loadbar view

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -1,7 +1,10 @@
 @default-fg: #e3e3e3;
 @default-bg: #ffffff;
 @lighter-fg: #ffffff;
-@darker-fg: #222222;;
+@darker-fg: #222222;
+
+@loadbar-bg: rgba(0, 114, 230, 0.95);
+@loadbar-shadow: 0 0 6px #0065ca;
 
 @navbar-bg-solid: #090909;
 @navbar-bg-start: #090909;
