Change item removing class

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -420,15 +420,15 @@
   background-color: @item-failed-active-bg;
 }
 
-.backup .item-box.removing .item {
+.backup .item-box.item-removing .item {
   background-color: @item-removing-bg;
 }
 
-.backup .item-box.removing .item:hover {
+.backup .item-box.item-removing .item:hover {
   background-color: @item-removing-hover-bg;
 }
 
-.backup .item-box.selected.removing .item {
+.backup .item-box.selected.item-removing .item {
   background-color: @item-removing-active-bg;
 }
 
@@ -504,7 +504,7 @@
   border-bottom: @item-failed-box-border;
 }
 
-.backup .item-box.removing .info {
+.backup .item-box.item-removing .info {
   background-color: @item-removing-box-bg;
   border-left: @item-removing-box-border;
   border-right: @item-removing-box-border;
