Bold snapshot warning text

--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -13,7 +13,7 @@
     ID: <%= id %>
     <% if (state === 'warning') { %>
       <br>
-      Snapshot completed with warnings check log for more information.
+      <b>Snapshot completed with warnings check log for more information.</b>
     <% } %>
   </div>
 </div>
