--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -13,7 +13,9 @@
     ID: <%= id %>
     <% if (state === 'warning') { %>
       <br>
-      <b>Snapshot completed with warnings check log for more information.</b>
+      <b>Completed with warnings.</b>
+      <br>
+      <b>Check log for more information.</b>
     <% } %>
   </div>
 </div>
