--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -16,6 +16,12 @@
       <b>Completed with warnings.</b>
       <br>
       <b>Check log for more information.</b>
+    <%
+       }
+       else if (state === 'removing') {
+    %>
+      <br>
+      <b>Snapshot is being removed.</b>
     <% } %>
   </div>
 </div>
