Change failed item bg color

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -78,7 +78,7 @@
 
 @item-failed-bg: #f53205;
 @item-failed-hover-bg: #c72904;
-@item-failed-active-bg: #ff6f4f;
+@item-failed-active-bg: #ff4117;
 @item-failed-box-bg: rgba(245, 50, 5, 0.5);
 @item-failed-box-border: 1px solid @item-failed-bg;
 
