Fix style for items

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -370,6 +370,14 @@
   padding: 4px;
 }
 
+.backup .item-box .item {
+  background-color: @button-bg;
+}
+
+.backup .item-box .item:hover {
+  background-color: @button-hover-bg;
+}
+
 .backup .item-box.selected .item {
   background-color: @button-active-bg;
 }
