Fix pointer for tasks

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -367,7 +367,12 @@
 }
 
 .backup .item-box .item {
+  cursor: default;
   background-color: @button-bg;
+}
+
+.backup .item-box .item.button {
+  cursor: pointer;
 }
 
 .backup .item-box .item:hover {
