--- a/www/templates/backup/task.html
+++ b/www/templates/backup/task.html
@@ -20,7 +20,7 @@
 
 %>
 <div class="item-box <%= state %>">
-  <div class="item button red-tooltip">
+  <div class="item red-tooltip">
     <div class="title"><%= formatTime(time) %></div>
     <i class="task-type-icon <%= typeIcon %>"></i>
     <% if (state === 'failed') { %>
