Disable selection for items

--- a/www/templates/backup/snapshot.html
+++ b/www/templates/backup/snapshot.html
@@ -1,6 +1,6 @@
 <div class="item-box <%= state %>">
   <div class="item button">
-    <div class="title"><%= formatTime(id) %></div>
+    <div class="title no-select"><%= formatTime(id) %></div>
     <i class="toggle-info icon-chevron-down no-select"></i>
     <i class="icon icon-remove no-select"></i>
     <i class="icon icon-stop no-select"></i>
