--- a/www/templates/backup/item.html
+++ b/www/templates/backup/item.html
@@ -1,6 +1,6 @@
 <div class="item-box">
   <div class="item button">
-    <div class="title"><%= title %></div>
+    <div class="title no-select"><%= title %></div>
     <i class="toggle-info icon-chevron-down no-select"></i>
     <i class="icon icon-remove no-select"></i>
     <i class="icon icon-stop no-select"></i>
