--- a/www/templates/backup/task.html
+++ b/www/templates/backup/task.html
@@ -21,10 +21,10 @@
 %>
 <div class="item-box <%= state %>">
   <div class="item red-tooltip">
-    <div class="title"><%= formatTime(time) %></div>
-    <i class="task-type-icon <%= typeIcon %>"></i>
+    <div class="title no-select"><%= formatTime(time) %></div>
+    <i class="task-type-icon no-select <%= typeIcon %>"></i>
     <% if (state === 'failed') { %>
-      <i class="task-failed-icon icon-warning-sign"></i>
+      <i class="task-failed-icon no-select icon-warning-sign"></i>
     <% } %>
     <i class="toggle-info icon-chevron-down no-select"></i>
     <i class="icon icon-remove no-select"></i>
