Change class for text viewer sub text

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -788,7 +788,7 @@
   height: 20px;
 }
 
-.backup .text-viewer-box .title .snapshot-text {
+.backup .text-viewer-box .title .sub-text {
   font-size: 0.6em;
   float: right;
   margin-right: 5px;
