Use title var for text viewer

--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -7,7 +7,7 @@ else {
 }
 %>
 <div class="title">
-  <span class="id-text"><%= id %></span>
+  <span class="id-text"><%= title %></span>
   <i class="close-viewer icon-remove no-select"></i>
   <span class="sub-text"><%= subText %></span>
 </div>
