--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -15,6 +15,8 @@
 
 @page-min-width: 1200px;
 @object-drop-min-width: 449px;
+@object-text-view-min-width: @object-drop-min-width;
+@log-text-view-min-width: 728px;
 
 @selection-bg: #313233;
 
