--- a/www/templates/backup/task.html
+++ b/www/templates/backup/task.html
@@ -26,6 +26,7 @@
     <% if (state === 'failed') { %>
       <i class="task-failed-icon no-select icon-warning-sign"></i>
     <% } %>
+    <i class="view-log icon-list-alt no-select"></i>
     <i class="toggle-info icon-chevron-down no-select"></i>
     <i class="icon icon-remove no-select"></i>
     <i class="icon icon-stop no-select"></i>
