--- a/www/templates/backup/object.html
+++ b/www/templates/backup/object.html
@@ -5,7 +5,7 @@ if (type && type.indexOf('directory') !== -1) {
   isDir = true;
   titleClass = 'dir';
 }
-else if (syntax && size <= 1048576) {
+else if (syntax) {
   titleClass = 'text';
 }
 %>
