Set log viewer z-index

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -809,6 +809,7 @@
   margin-left: 10px;
   .width-calc(~'62% - 16px');
   min-width: @log-text-view-min-width;
+  z-index: 10;
 }
 
 .backup .text-viewer-box .title {
