Add theme selector to text viewer

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -826,7 +826,15 @@
   margin-right: 5px;
 }
 
+.backup .text-viewer-box .title .change-theme,
 .backup .text-viewer-box .title .close-viewer {
-  margin: 3px 0 0 0;
   float: right;
+}
+
+.backup .text-viewer-box .title .change-theme {
+  margin-top: 2px;
+}
+
+.backup .text-viewer-box .title .close-viewer {
+  margin-top: 3px;
 }
