--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -13,6 +13,7 @@ else {
 <div class="title">
   <span class="id-text"><%= title %></span>
   <i class="close-viewer icon-remove no-select"></i>
+  <i class="change-theme icon-picture no-select"></i>
   <span class="sub-text"><%= subText %></span>
 </div>
 <div class="data">
