--- a/www/templates/header/header.html
+++ b/www/templates/header/header.html
@@ -3,8 +3,8 @@
     <div class="container">
       <a class="brand" href="#"><i class="brand-img"></i></a>
       <ul class="nav">
-        <li class="backups-link links"><a href="#">Backups</a></li>
-        <li class="about-link links"><a href="#/about">About</a></li>
+        <li class="backups"><a href="#">Backups</a></li>
+        <li class="about"><a href="#/about">About</a></li>
       </ul>
     </div>
   </div>
