Use custom webkit scrollbar

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -31,6 +31,9 @@
 @button-active-bg: #3893d6;
 @button-disabled-bg: #6c8daf;
 
+@scrollbar-bg: #8f8f8f;
+@scrollbar-track-bg: #d1d1d1;
+
 @slider-bg: rgba(51, 51, 51, 0.8);
 @placeholder-fg: #c9c9c9;
 
