--- a/www/styles/globals.less
+++ b/www/styles/globals.less
@@ -20,6 +20,17 @@ body {
   text-shadow: none;
 }
 
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: @scrollbar-bg;
+}
+::-webkit-scrollbar-track {
+  background-color: @scrollbar-track-bg;
+}
+
 textarea,
 input[type="text"],
 input[type="password"],
