--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -18,6 +18,7 @@
 @object-drop-min-width: 449px;
 @object-text-view-min-width: @object-drop-min-width;
 @log-text-view-min-width: 728px;
+@object-list-error-min-width: 378px;
 
 @selection-bg: #313233;
 
