--- a/www/templates/backup/objectList.html
+++ b/www/templates/backup/objectList.html
@@ -1,4 +1,8 @@
 <div class="object-list-box">
+  <div class="error">
+    <span class="error-msg"></span>
+    <i class="close-error icon-remove no-select"></i>
+  </div>
   <table>
     <colgroup>
       <col class="select-col-group"></col>
