Use shorthand css hex colors

--- a/www/styles/variables.less
+++ b/www/styles/variables.less
@@ -1,8 +1,8 @@
 @default-fg: #e3e3e3;
-@default-bg: #ffffff;
-@black-fg: #000000;
-@lighter-fg: #ffffff;
-@darker-fg: #222222;
+@default-bg: #fff;
+@black-fg: #000;
+@lighter-fg: #fff;
+@darker-fg: #222;
 
 @loadbar-bg: rgba(0, 114, 230, 0.95);
 @loadbar-shadow: 0 0 6px #0065ca;
@@ -26,7 +26,7 @@
 @input-bg: rgba(51, 51, 51, 0.3);
 @input-border: 1px solid #cccccc;
 
-@button-fg: #ffffff;
+@button-fg: #fff;
 @button-bg: #0072e6;
 @button-hover-bg: #0065cc;
 @button-active-bg: #3893d6;
@@ -65,7 +65,7 @@
 @notification-bg: #ff2b2a;
 @notification-hover-bg: #de2525;
 @notification-active-bg: #ff3735;
-@notification-flash-bg: #ffffff;
+@notification-flash-bg: #fff;
 
 @remove-bg: #d30907;
 @remove-hover-bg: #960605;
@@ -97,12 +97,12 @@
 
 @item-id-fg: #ebebeb;
 
-@object-fg: #222222;
+@object-fg: #222;
 @object-border: solid 1px #ababab;
 @object-hover-border: solid 1px #858585;
 @object-selected-bg: #c5e4fc;
 
-@object-path-fg: #777777;
+@object-path-fg: #777;
 
 @object-drop-bg: rgba(0, 114, 230, 0.12);
 @object-drop-hover-bg: rgba(0, 114, 230, 0.25);
