--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -540,7 +540,7 @@
 
 .backup .object-list-box .error {
   background-color: rgba(255, 0, 0, 0.79);
-  color: #FFF;
+  color: @lighter-fg;
   border: 1px solid rgba(0, 0, 0, 0.5);
   margin-left: 14px;
   position: absolute;
