Add error div to item list

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -349,6 +349,19 @@
   display: none;
 }
 
+.backup .item-list-box .error {
+  padding: 5px;
+  background-color: @remove-bg;
+  text-align: center;
+  display: none;
+}
+
+.backup .item-list-box .error .close-error {
+  float: right;
+  margin-top: 3px;
+  margin-right: 2px;
+}
+
 .backup .item-list-box .remove-selected:hover {
   background-color: @remove-hover-bg;
 }
