--- a/www/templates/backup/snapshotList.html
+++ b/www/templates/backup/snapshotList.html
@@ -6,4 +6,8 @@
   </div>
   <ul class="item-list"></ul>
   <div class="remove-selected no-select"><%= removeTitle %></div>
+  <div class="error">
+    <span></span>
+    <i class="close-error icon-remove no-select"></i>
+  </div>
 </div>
