Add refresh button to text view

--- a/www/styles/backup.less
+++ b/www/styles/backup.less
@@ -864,7 +864,8 @@
 }
 
 .backup .text-viewer-box .title .change-theme,
-.backup .text-viewer-box .title .close-viewer {
+.backup .text-viewer-box .title .close-viewer,
+.backup .text-viewer-box .title .refresh-viewer {
   float: right;
 }
 
@@ -872,6 +873,7 @@
   margin-top: 2px;
 }
 
-.backup .text-viewer-box .title .close-viewer {
+.backup .text-viewer-box .title .close-viewer,
+.backup .text-viewer-box .title .refresh-viewer {
   margin-top: 3px;
 }
