--- a/www/templates/backup/text.html
+++ b/www/templates/backup/text.html
@@ -14,6 +14,7 @@ else {
   <span class="id-text"><%= title %></span>
   <i class="close-viewer icon-remove no-select"></i>
   <i class="change-theme icon-picture no-select"></i>
+  <i class="refresh-viewer icon-refresh no-select"></i>
   <span class="sub-text"><%= subText %></span>
 </div>
 <div class="data">
